examples/test/testpolicy12098.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12098
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key46: value11
      key24: value47
      key35: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value8
          key21: value38
          key46: value38
      podSelector:
        matchLabels:
          key35: value22
